# navsim-local

./: ACKERMANN_ENVELOPE_FIX.md  BUILD_AND_RUN.md  BUILD_GUIDE.md  CHASSIS_TYPE_VISUALIZATION.md  CMakeLists.txt  DYNAMIC_PLUGIN_LOADING_REPORT.md  EGO_VEHICLE_VISUALIZATION_FIX.md  ESDF_PLUGIN_ADAPTATION.md  ESDF_PLUGIN_COMPLETE.md  ESDF_PLUGIN_FIXED.md  ESDF_VISUALIZATION.md  LEGEND_PANEL_FEATURE.md  OCCUPANCY_GRID_PRECISION_FIX.md  PLUGIN_SUBPROJECT_CHECKLIST.md  PLUGIN_SUBPROJECT_DESIGN.md  PLUGIN_SUBPROJECT_IMPLEMENTATION_REPORT.md  PLUGIN_SUBPROJECT_MIGRATION.md  PLUGIN_SUBPROJECT_SUMMARY.md  QUICK_START.md  README.md  REFACTORING_PROPOSAL.md  REFACTORING_SUMMARY.md  SCENARIO_LOAD_TEST.md  TEST_SCENARIO_LOAD.md  TRAJECTORY_TRACKING_IMPROVEMENTS.md  VISUALIZATION_IMPROVEMENTS.md  build.sh  build_and_run_debug.sh  build_with_visualization.sh  imgui.ini  test_scenario_load.sh  test_tracking_simple  test_tracking_simple.cpp  test_trajectory_tracking.cpp  test_velocity_fix.cpp  test_velocity_preservation.cpp
apps/: navsim_algo.cpp  navsim_local_debug.cpp
cmake/: NavSimPluginConfig.cmake.in
config/: README.md  default.json  example_astar.json
docs/: ARCHITECTURE.md  AVAILABLE_PLUGINS.md  DEVELOPMENT_TOOLS.md  ESDF_ALGORITHM_COMPARISON.md  ESDF_BUILDER_REFACTOR_PLAN.md  ESDF_BUILDER_REFACTOR_SUMMARY.md  ESDF_REFACTOR_FINAL_SUMMARY.md  ESDF_VISUALIZATION_FIX.md  GETTING_STARTED.md  JPS_BUILD_AND_TEST_GUIDE.md  JPS_CODE_ANALYSIS.md  JPS_MIGRATION_COMPLETE.md  JPS_MIGRATION_PLAN.md  PLUGIN_SYSTEM_GUIDE.md  (+8 more)
plugins/: CMakeLists.txt  README.md  plugin_loader.cpp
plugins/perception/: CMakeLists.txt
plugins/perception/esdf_builder/: CMakeLists.txt
plugins/perception/esdf_builder/include/: esdf_builder_plugin.hpp  esdf_builder_plugin_register.hpp  esdf_map.hpp
plugins/perception/esdf_builder/src/: esdf_builder_plugin.cpp  esdf_map.cpp  register.cpp
plugins/perception/esdf_map/include/: sdf_map.h
plugins/perception/grid_map_builder/: CMakeLists.txt
plugins/perception/grid_map_builder/include/: grid_map_builder_plugin.hpp  grid_map_builder_plugin_register.hpp
plugins/perception/grid_map_builder/src/: grid_map_builder_plugin.cpp  register.cpp
plugins/planning/: CMakeLists.txt
plugins/planning/astar/: CMakeLists.txt
plugins/planning/astar/include/: astar_planner_plugin_register.hpp
plugins/planning/astar/src/: register.cpp
plugins/planning/astar_planner/: CMakeLists.txt  README.md
plugins/planning/astar_planner/adapter/: astar_planner_plugin.cpp  astar_planner_plugin.hpp  register.cpp
plugins/planning/astar_planner/algorithm/: astar_planner.cpp  astar_planner.hpp
plugins/planning/ddr_opt/include/front_end/jps_planner/: graph_search.h  jps_planner.h
plugins/planning/ddr_opt/src/front_end/jps_planner/: graph_search.cpp  jps_planner.cpp
plugins/planning/jps_planner/: CMakeLists.txt  README.md
plugins/planning/jps_planner/adapter/: jps_planner_plugin.cpp  jps_planner_plugin.hpp  register.cpp
plugins/planning/jps_planner/algorithm/: graph_search.cpp  jps_data_structures.hpp  jps_planner.cpp  jps_planner.hpp
plugins/planning/jps_planner/algorithm/opt/: optimizer.cpp
plugins/planning/jps_planner_new/: CMakeLists.txt  README.md
plugins/planning/jps_planner_new/adapter/: jps_planner_plugin.cpp  register.cpp
plugins/planning/jps_planner_plugin/: CMakeLists.txt
plugins/planning/jps_planner_plugin/include/: graph_search.hpp  jps_planner_plugin.hpp  jps_planner_plugin_register.hpp
plugins/planning/jps_planner_plugin/src/: jps_planner_plugin.cpp  register.cpp
plugins/planning/straight_line/: CMakeLists.txt
plugins/planning/straight_line/include/: straight_line_planner_plugin_register.hpp
plugins/planning/straight_line/src/: register.cpp
plugins/planning/straight_path_planner/: CMakeLists.txt  README.md
plugins/planning/straight_path_planner/adapter/: register.cpp  straight_path_planner_plugin.cpp  straight_path_planner_plugin.hpp
plugins/planning/straight_path_planner/algorithm/: straight_path_planner.cpp  straight_path_planner.hpp
plugins/planning/t_mpc/algorithm/: .gitignore
plugins/planning/t_mpc/algorithm/mpc_planner_jackalsimulator/cfg/: jackalsimulator.cfg
plugins/planning/t_mpc/algorithm/mpc_planner_jackalsimulator/include/mpc_planner_jackalsimulator/: jackalsimulator_reconfigure.h  jackalsimulator_ros2_reconfigure.h
plugins/planning/t_mpc/algorithm/mpc_planner_modules/include/mpc_planner_modules/: definitions.h  modules.h
plugins/planning/t_mpc/algorithm/mpc_planner_solver/Solver/include/: mpc_planner_generated.cpp  mpc_planner_generated.h
plugins/planning/t_mpc/algorithm/mpc_planner_solver/acados/Solver/: Solver.json  acados_sim_solver_Solver.c  acados_sim_solver_Solver.h  acados_solver.pxd  acados_solver_Solver.c  acados_solver_Solver.h  main_Solver.c  main_sim_Solver.c
plugins/planning/t_mpc/algorithm/mpc_planner_solver/acados/Solver/Solver_constraints/: Solver_constr_h_fun.c  Solver_constr_h_fun_jac_uxt_zt.c  Solver_constr_h_fun_jac_uxt_zt_hess.c  Solver_constraints.h
plugins/planning/t_mpc/algorithm/mpc_planner_solver/acados/Solver/Solver_cost/: Solver_cost.h  Solver_cost_ext_cost_0_fun.c  Solver_cost_ext_cost_0_fun_jac.c  Solver_cost_ext_cost_0_fun_jac_hess.c  Solver_cost_ext_cost_fun.c  Solver_cost_ext_cost_fun_jac.c  Solver_cost_ext_cost_fun_jac_hess.c
plugins/planning/t_mpc/algorithm/mpc_planner_solver/acados/Solver/Solver_model/: Solver_expl_ode_fun.c  Solver_expl_ode_hess.c  Solver_expl_vde_adj.c  Solver_expl_vde_forw.c  Solver_model.h
plugins/planning/t_mpc/algorithm/mpc_planner_solver/config/: model_map.yaml  parameter_map.yaml  solver_settings.yaml
plugins/planning/t_mpc/algorithm/mpc_planner_solver/include/mpc_planner_solver/: mpc_planner_parameters.h
plugins/planning/t_mpc/algorithm/mpc_planner_solver/src/: mpc_planner_parameters.cpp
templates/planner_plugin/: CMakeLists.txt  README.md
templates/planner_plugin/adapter/: register.cpp  {{PLUGIN_NAME_SNAKE}}_plugin.cpp  {{PLUGIN_NAME_SNAKE}}_plugin.hpp
templates/planner_plugin/algorithm/: {{PLUGIN_NAME_SNAKE}}.cpp  {{PLUGIN_NAME_SNAKE}}.hpp
(+85 files in other folders)
