cmake_minimum_required(VERSION 3.16)
project(navsim_local LANGUAGES CXX)

# ========== Protobuf ==========
find_package(Protobuf REQUIRED)
set(Protobuf_USE_STATIC_LIBS OFF)

set(PROTO_FILES
    platform/proto/world_tick.proto
    platform/proto/plan_update.proto
    platform/proto/ego_cmd.proto)

set(PROTOBUF_IMPORT_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/platform/proto)
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})

add_library(navsim_proto STATIC ${PROTO_SRCS} ${PROTO_HDRS})
set_target_properties(navsim_proto PROPERTIES POSITION_INDEPENDENT_CODE ON)

target_include_directories(navsim_proto
    PUBLIC
      ${CMAKE_CURRENT_BINARY_DIR}
      ${Protobuf_INCLUDE_DIRS})

target_link_libraries(navsim_proto PUBLIC ${Protobuf_LIBRARIES})

target_compile_features(navsim_proto PUBLIC cxx_std_17)

# ========== ixwebsocket ==========
# 配置 ixwebsocket 选项
set(USE_TLS ON CACHE BOOL "Enable TLS support for wss://")
set(USE_ZLIB ON CACHE BOOL "Enable zlib compression")

# 添加 ixwebsocket 子目录
add_subdirectory(third_party/ixwebsocket)

# ========== nlohmann/json ==========
# header-only library, 只需添加 include 路径

# ========== Eigen3 (for linear algebra) ==========
find_package(Eigen3 QUIET)
if(NOT Eigen3_FOUND)
    # 如果系统没有安装Eigen3，可以下载header-only版本
    message(STATUS "Eigen3 not found, using header-only fallback")
    set(EIGEN3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/eigen")
endif()

# ========== Plugin Framework Library (without concrete plugins) ==========
# 使用 SHARED 库以确保所有插件共享同一个注册表实例
add_library(navsim_plugin_framework SHARED
    # Plugin framework
    platform/src/plugin/framework/perception_plugin_manager.cpp
    platform/src/plugin/framework/planner_plugin_manager.cpp
    platform/src/plugin/framework/config_loader.cpp
    platform/src/plugin/framework/plugin_init.cpp
    platform/src/plugin/framework/dynamic_plugin_loader.cpp
    # Preprocessing
    platform/src/plugin/preprocessing/bev_extractor.cpp
    platform/src/plugin/preprocessing/dynamic_predictor.cpp
    platform/src/plugin/preprocessing/basic_converter.cpp
    platform/src/plugin/preprocessing/preprocessing_pipeline.cpp)

target_include_directories(navsim_plugin_framework
    PUBLIC
      platform/include
      ${CMAKE_CURRENT_BINARY_DIR}
      third_party/nlohmann)

if(Eigen3_FOUND)
    target_link_libraries(navsim_plugin_framework PUBLIC Eigen3::Eigen)
    target_include_directories(navsim_plugin_framework PUBLIC ${EIGEN3_INCLUDE_DIRS})
else()
    target_include_directories(navsim_plugin_framework PUBLIC ${EIGEN3_INCLUDE_DIR})
endif()

target_link_libraries(navsim_plugin_framework
    PUBLIC
        navsim_proto
    PRIVATE
        ${CMAKE_DL_LIBS})  # 链接 libdl (dlopen/dlsym)
target_compile_features(navsim_plugin_framework PUBLIC cxx_std_17)

# ========== Plugin Sub-projects ==========
option(BUILD_PLUGINS "Build built-in plugins" ON)
if(BUILD_PLUGINS)
    add_subdirectory(plugins)
    # 定义 C++ 宏，让代码知道插件已启用
    add_compile_definitions(BUILD_PLUGINS)
endif()

# ========== Visualization (ImGui + SDL2) ==========
option(ENABLE_VISUALIZATION "Enable ImGui visualization" ON)
if(ENABLE_VISUALIZATION)
    message(STATUS "Visualization enabled")

    # 查找 SDL2
    find_package(SDL2 REQUIRED)

    # 添加 ImGui（假设在 third_party/imgui）
    set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui)
    if(NOT EXISTS ${IMGUI_DIR})
        message(FATAL_ERROR "ImGui not found at ${IMGUI_DIR}. Please run: cd third_party && git clone https://github.com/ocornut/imgui.git")
    endif()

    # 添加 ImPlot（假设在 third_party/implot）
    set(IMPLOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/implot)
    if(NOT EXISTS ${IMPLOT_DIR})
        message(FATAL_ERROR "ImPlot not found at ${IMPLOT_DIR}. Please download ImPlot files.")
    endif()

    # 创建 ImGui 库 - 使用 SDL_Renderer 后端（不依赖 OpenGL）
    add_library(imgui STATIC
        ${IMGUI_DIR}/imgui.cpp
        ${IMGUI_DIR}/imgui_demo.cpp
        ${IMGUI_DIR}/imgui_draw.cpp
        ${IMGUI_DIR}/imgui_tables.cpp
        ${IMGUI_DIR}/imgui_widgets.cpp
        ${IMGUI_DIR}/backends/imgui_impl_sdl2.cpp
        ${IMGUI_DIR}/backends/imgui_impl_sdlrenderer2.cpp  # 使用 SDL_Renderer!
        # ImPlot 源文件
        ${IMPLOT_DIR}/implot.cpp
        ${IMPLOT_DIR}/implot_items.cpp
    )

    target_include_directories(imgui PUBLIC
        ${IMGUI_DIR}
        ${IMGUI_DIR}/backends
        ${IMPLOT_DIR}  # 添加 ImPlot 头文件路径
        ${SDL2_INCLUDE_DIRS}
    )

    target_link_libraries(imgui PUBLIC
        ${SDL2_LIBRARIES}
        ${CMAKE_DL_LIBS}
    )

    # 不再需要 OpenGL!

    # 定义宏
    add_compile_definitions(ENABLE_VISUALIZATION)
endif()

# ========== Core Library ==========
set(NAVSIM_PLANNING_SOURCES
    platform/src/core/planning_context.cpp
    platform/src/core/algorithm_manager.cpp
    platform/src/core/websocket_visualizer.cpp
    platform/src/core/scenario_loader.cpp
    platform/src/control/trajectory_tracker.cpp
    platform/src/viz/visualizer_factory.cpp
    platform/src/sim/local_simulator.cpp
)

# 添加可视化源文件（如果启用）
if(ENABLE_VISUALIZATION)
    list(APPEND NAVSIM_PLANNING_SOURCES
        platform/src/viz/imgui_visualizer.cpp
    )
endif()

add_library(navsim_planning STATIC ${NAVSIM_PLANNING_SOURCES})

target_include_directories(navsim_planning
    PUBLIC
      platform/include
      ${CMAKE_CURRENT_BINARY_DIR}
      third_party/nlohmann)

if(Eigen3_FOUND)
    target_link_libraries(navsim_planning PUBLIC Eigen3::Eigen)
    target_include_directories(navsim_planning PUBLIC ${EIGEN3_INCLUDE_DIRS})
else()
    target_include_directories(navsim_planning PUBLIC ${EIGEN3_INCLUDE_DIR})
endif()

target_link_libraries(navsim_planning
    PUBLIC
      navsim_proto
      navsim_plugin_framework
      $<$<BOOL:${BUILD_PLUGINS}>:navsim_builtin_plugins>
      $<$<BOOL:${ENABLE_VISUALIZATION}>:imgui>
)
target_compile_features(navsim_planning PUBLIC cxx_std_17)

# ========== navsim_algo executable ==========
add_executable(navsim_algo
    apps/navsim_algo.cpp
    platform/src/core/bridge.cpp)

target_include_directories(navsim_algo
    PRIVATE
      platform/include
      ${CMAKE_CURRENT_BINARY_DIR}
      third_party/nlohmann)  # nlohmann/json

target_link_libraries(navsim_algo
    PRIVATE
      navsim_planning  # 新增规划和感知模块
      navsim_proto
      ${Protobuf_LIBRARIES}
      ixwebsocket)  # ixwebsocket 库

target_compile_features(navsim_algo PRIVATE cxx_std_17)

# 配置 ixwebsocket 重连参数（指数回退 0.5s → 5s）
target_compile_definitions(navsim_algo PRIVATE
    IX_WS_MIN_WAIT_BETWEEN_RECONNECTION_RETRIES=500
    IX_WS_MAX_WAIT_BETWEEN_RECONNECTION_RETRIES=5000)

# ========== navsim_local_debug executable ==========
add_executable(navsim_local_debug
    apps/navsim_local_debug.cpp)

target_include_directories(navsim_local_debug
    PRIVATE
      platform/include
      ${CMAKE_CURRENT_BINARY_DIR}
      third_party/nlohmann)

target_link_libraries(navsim_local_debug
    PRIVATE
      navsim_planning
      navsim_proto
      ${Protobuf_LIBRARIES})

target_compile_features(navsim_local_debug PRIVATE cxx_std_17)

# ========== Test Executable ==========
add_executable(test_plugin_system
    tests/test_plugin_system.cpp
    platform/src/core/bridge.cpp)  # 添加 bridge.cpp 以解决链接问题

target_include_directories(test_plugin_system
    PRIVATE
      platform/include
      ${CMAKE_CURRENT_BINARY_DIR}
      third_party/nlohmann)

target_link_libraries(test_plugin_system
    PRIVATE
      navsim_planning
      navsim_proto
      ${Protobuf_LIBRARIES}
      ixwebsocket)  # 添加 ixwebsocket 库

target_compile_features(test_plugin_system PRIVATE cxx_std_17)

# ========== ESDF Map Test ==========
add_executable(test_esdf_map
    tests/test_esdf_map.cpp
    plugins/perception/esdf_builder/src/esdf_map.cpp)

target_include_directories(test_esdf_map
    PRIVATE
      plugins/perception/esdf_builder/include
      ${EIGEN3_INCLUDE_DIR})

target_link_libraries(test_esdf_map
    PRIVATE
      ${EIGEN3_LIBRARIES})

target_compile_features(test_esdf_map PRIVATE cxx_std_17)

# ========== GoogleTest for LocalSimulator tests ==========
find_package(GTest QUIET)
if(GTest_FOUND)
    message(STATUS "GoogleTest found, enabling LocalSimulator tests")

    add_executable(test_local_simulator
        tests/test_local_simulator.cpp)

    target_include_directories(test_local_simulator
        PRIVATE
          platform/include
          ${CMAKE_CURRENT_BINARY_DIR}
          third_party/nlohmann)

    target_link_libraries(test_local_simulator
        PRIVATE
          navsim_planning
          navsim_proto
          ${Protobuf_LIBRARIES}
          GTest::GTest
          GTest::Main)

    target_compile_features(test_local_simulator PRIVATE cxx_std_17)

    # 添加到测试套件
    enable_testing()
    add_test(NAME LocalSimulatorTest COMMAND test_local_simulator)
else()
    message(STATUS "GoogleTest not found, skipping LocalSimulator tests")
    message(STATUS "To install: sudo apt-get install libgtest-dev")
endif()
